# 0.00.66 (54407) Jul 21, 2011
Micro tab: Fixed: Beaker tick labels go offscreen
Micro tab: Fixed: Pause/playback should reset on "Reset All"
Micro tab: Fixed: Sugar molecules come out at the center of the sugar dispenser instead of the end
Micro tab: Fixed: Salts come out at the center of the shaker instead of the end
Micro tab: Added a button to the ethanol dropper
Micro tab: Fixed: particles get stuck in the floor
Micro tab: Ethanol molecules appear at different angles
Micro tab: Added ethanol atomic structure
Micro tab: Made ethanol particles come out of the tip of the dropper instead of its center
Micro tab: Added ethanol particles
Micro tab: Added an image for the ethanol dropper
Micro tab: Added molecular formulae for all molecules in kits 2-4
Micro tab: When changing kits, switch to a new dispenser (unless dispenser exists in new kit)
Micro tab: When the user switches kits, clear the solutes
Micro tab: Kit resets on "reset all"
Micro tab: Fixed: Kits extend into the border of the kit control panel
Micro tab: Added kits for different solutes
Micro tab: Ensure that crystal component ratios are exact (such as 1:1 for NaCl or 2:1 for CaCl)
Micro tab: Made oxygen atoms in sugar molecule charge color neutral
Micro tab: Changed color for neutral from gray to yellow
Micro tab: Fixed: "Show Charge" doesn't reset on "Reset All"
Micro tab: Hide the periodic table on reset, and make it come up in the default location next time
Micro tab: Fixed: combo box doesn't reset on "Reset All"
Micro tab: Fixed: crystals and ions don't clear on "Reset All"
Micro tab: Fixed: Na+ and Cl- in crystals count towards saturation point
Micro tab: Fixed: Sometimes crystals fall through the bottom of the beaker
# 0.00.65 (54315) Jul 20, 2011
Micro tab: Added icons to the bar chart
Micro tab: Color Na+ and Cl- bars to match with atom colors, and toggle bar colors when "show charge" is toggled
Micro tab: Added Na+ and Cl- bars to the bar chart
Micro tab: Fixed: sucrose molecule disassociates